<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bbffffff"
    >
    <LinearLayout
        android:id="@+id/debug_btn_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/debug_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_clear"
            />
        <Button
            android:id="@+id/debug_copy_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_copy_all"
            />
        <Button
            android:id="@+id/debug_save_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_save_all"
            />
    </LinearLayout>
    <ScrollView
        android:id="@+id/debug_scrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/debug_btn_container"
        android:layout_above="@+id/debug_control_container"
        >
        <TextView
            android:id="@+id/debug_msg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:autoLink="all"
            />
    </ScrollView>
    <GridLayout
        android:id="@+id/debug_control_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:columnCount="2"
        >

        <Button
            android:id="@+id/debug_last_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_last_page"
            />
        <Button
            android:id="@+id/debug_next_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_next_page"
            />
        <Button
            android:id="@+id/debug_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_start"
            />
        <Button
            android:id="@+id/debug_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_end"
            />
    </GridLayout>
</RelativeLayout>